[package]
name = "hills"
version = "0.1.0"
edition = "2021"

[dependencies]
sled = "0.34"
rkyv = { workspace = true }
serde = "1.0"
ron = "0.8"
postage = "0.5"
tokio = { version = "1.35", default-features = false, features = ["macros", "io-std", "net", "rt-multi-thread", "time"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
chrono = { workspace = true }
thiserror = "1.0"
log = "0.4"
uuid = { version = "1.7.0", features = ["v4"] }

hills_base = { path = "../hills_base" }
hills_derive = { path = "../hills_derive" }
